--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,3 +1,16 @@
-h1 {
-  font-weight:100;
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,900);
+
+body,
+input {
+  font-family:'Lato', Helvetica, Arial, sans-serif;
+}
+
+h1,
+h3,
+h5 {
+  font-weight:300;
+}
+
+input {
+  font-size:1.618em;
 }
